tests/baselines/reference/restElementWithAssignmentPattern4.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern4.ts(3,18): error TS2459: Type '[string, number]' has no property 'b' and no string index signature.


==== tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern4.ts (1 errors) ====
    var a: string, b: number;
    var tuple: [string, number] = ["", 1];
    [...{ 0: a = "", b }] = tuple;
                     ~
!!! error TS2459: Type '[string, number]' has no property 'b' and no string index signature.